--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\souma\AppData\Local\Temp\testng-eclipse-1614984447\testng-customsuite.xml</span>
+                    <span>C:\Users\souma\AppData\Local\Temp\testng-eclipse--852196110\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_001" class="method navigator-link" hash-for-method="verifyRegisteringWithMandatoryFields">verifyRegisteringWithMandatoryFields</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_002" class="method navigator-link" hash-for-method="verifyConfirmationEmail">verifyConfirmationEmail</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -121,23 +121,23 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">tutorialsninja.register.TC_RF_001</span>
+              <span class="class-name">tutorialsninja.register.TC_RF_002</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyRegisteringWithMandatoryFields">
-                  </a> <!-- verifyRegisteringWithMandatoryFields -->
-                  <span class="method-name">verifyRegisteringWithMandatoryFields</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;link text&quot;,&quot;selector&quot;:&quot;Register&quot;}
-  (Session info: chrome=137.0.7151.104)
+                  <a name="verifyConfirmationEmail">
+                  </a> <!-- verifyConfirmationEmail -->
+                  <span class="method-name">verifyConfirmationEmail</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//span[contains(text(),&apos;Need help&apos;)]&quot;}
+  (Session info: chrome=137.0.7151.120)
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.33.0&apos;, revision: &apos;2c6aaad03a&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [ac4ceecfa203488a4ea4f6a3c9acba5c, findElement {using=link text, value=Register}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 137.0.7151.104, chrome: {chromedriverVersion: 137.0.7151.70 (dfa4dc56b2ab..., userDataDir: C:\Users\souma\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:49823}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:49823/devtoo..., se:cdpVersion: 137.0.7151.104, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: ac4ceecfa203488a4ea4f6a3c9acba5c
+Command: [27bf10b27ca400c42216b32384fa04d4, findElement {using=xpath, value=//span[contains(text(),&apos;Need help&apos;)]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 137.0.7151.120, chrome: {chromedriverVersion: 137.0.7151.119 (e0ac9d12dff..., userDataDir: C:\Users\souma\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:55733}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:55733/devtoo..., se:cdpVersion: 137.0.7151.120, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 27bf10b27ca400c42216b32384fa04d4
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:501)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:485)
@@ -152,7 +152,7 @@ Session ID: ac4ceecfa203488a4ea4f6a3c9acba5c
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
-	at tutorialsninja.register.TC_RF_001.verifyRegisteringWithMandatoryFields(TC_RF_001.java:23)
+	at tutorialsninja.register.TC_RF_002.verifyConfirmationEmail(TC_RF_002.java:32)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -188,7 +188,7 @@ Session ID: ac4ceecfa203488a4ea4f6a3c9acba5c
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\souma\AppData\Local\Temp\testng-eclipse-1614984447\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\souma\AppData\Local\Temp\testng-eclipse--852196110\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,11 +197,7 @@ Session ID: ac4ceecfa203488a4ea4f6a3c9acba5c
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tutorialsninja.register.TC_RF_001&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;verifyRegisteringWithMandatoryFields&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tutorialsninja.register.TC_RF_001 --&gt;
+      &lt;class name=&quot;tutorialsninja.register.TC_RF_002&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -243,14 +239,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyRegisteringWithMandatoryFields')
-data.setCell(0, 2, 'tutorialsninja.register.TC_RF_001')
-data.setCell(0, 3, 9566);
+data.setCell(0, 1, 'verifyConfirmationEmail')
+data.setCell(0, 2, 'tutorialsninja.register.TC_RF_002')
+data.setCell(0, 3, 8732);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -276,11 +272,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tutorialsninja.register.TC_RF_001</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tutorialsninja.register.TC_RF_002</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">verifyRegisteringWithMandatoryFields</span>
+                <span class="method-name">verifyConfirmationEmail</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
