--- a/LiveAutomationProjects/test-output/index.html
+++ b/LiveAutomationProjects/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\souma\AppData\Local\Temp\testng-eclipse-2119241606\testng-customsuite.xml</span>
+                    <span>C:\Users\souma\AppData\Local\Temp\testng-eclipse-2131014165\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_004" class="method navigator-link" hash-for-method="verifyRegisteringAccountWithoutFillFields">verifyRegisteringAccountWithoutFillFields</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_005" class="method navigator-link" hash-for-method="verifyRegisteringAccountBySubscribingToNewsletter">verifyRegisteringAccountBySubscribingToNewsletter</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -121,22 +121,38 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">tutorialsninja.register.TC_RF_004</span>
+              <span class="class-name">tutorialsninja.register.TC_RF_005</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyRegisteringAccountWithoutFillFields">
-                  </a> <!-- verifyRegisteringAccountWithoutFillFields -->
-                  <span class="method-name">verifyRegisteringAccountWithoutFillFields</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [Warning: You must agree to the Privacy Policy] but found [Warning: You must agree to the Privacy Policy!]
-	at org.testng.Assert.fail(Assert.java:111)
-	at org.testng.Assert.failNotEquals(Assert.java:1590)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:150)
-	at org.testng.Assert.assertEquals(Assert.java:132)
-	at org.testng.Assert.assertEquals(Assert.java:656)
-	at org.testng.Assert.assertEquals(Assert.java:666)
-	at tutorialsninja.register.TC_RF_004.verifyRegisteringAccountWithoutFillFields(TC_RF_004.java:39)
+                  <a name="verifyRegisteringAccountBySubscribingToNewsletter">
+                  </a> <!-- verifyRegisteringAccountBySubscribingToNewsletter -->
+                  <span class="method-name">verifyRegisteringAccountBySubscribingToNewsletter</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;link text&quot;,&quot;selector&quot;:&quot;Subscribe / Unsubscribe to newsletter&quot;}
+  (Session info: chrome=137.0.7151.120)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.33.0&apos;, revision: &apos;2c6aaad03a&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [314564b29ee4ca89e5bfec8ccc066949, findElement {using=link text, value=Subscribe / Unsubscribe to newsletter}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 137.0.7151.120, chrome: {chromedriverVersion: 137.0.7151.119 (e0ac9d12dff..., userDataDir: C:\Users\souma\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58756}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58756/devtoo..., se:cdpVersion: 137.0.7151.120, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 314564b29ee4ca89e5bfec8ccc066949
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:501)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:485)
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:544)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
+	at tutorialsninja.register.TC_RF_005.verifyRegisteringAccountBySubscribingToNewsletter(TC_RF_005.java:35)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -172,7 +188,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\souma\AppData\Local\Temp\testng-eclipse-2119241606\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\souma\AppData\Local\Temp\testng-eclipse-2131014165\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -181,11 +197,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tutorialsninja.register.TC_RF_004&quot;&gt;
+      &lt;class name=&quot;tutorialsninja.register.TC_RF_005&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyRegisteringAccountWithoutFillFields&quot;/&gt;
+          &lt;include name=&quot;verifyRegisteringAccountBySubscribingToNewsletter&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tutorialsninja.register.TC_RF_004 --&gt;
+      &lt;/class&gt; &lt;!-- tutorialsninja.register.TC_RF_005 --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -227,14 +243,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyRegisteringAccountWithoutFillFields')
-data.setCell(0, 2, 'tutorialsninja.register.TC_RF_004')
-data.setCell(0, 3, 6037);
+data.setCell(0, 1, 'verifyRegisteringAccountBySubscribingToNewsletter')
+data.setCell(0, 2, 'tutorialsninja.register.TC_RF_005')
+data.setCell(0, 3, 13943);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -260,11 +276,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tutorialsninja.register.TC_RF_004</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tutorialsninja.register.TC_RF_005</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">verifyRegisteringAccountWithoutFillFields</span>
+                <span class="method-name">verifyRegisteringAccountBySubscribingToNewsletter</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
